Archive2/aa/1ac9dd2a0bd0dd/output
main.cpp: In function 'int main()':
main.cpp:27:55: error: could not convert '{{1, 2}, {3, 4}}' from '<brace-enclosed initializer list>' to 'std::vector<array<int, 2ul> >'
         std::vector<array<int, 2>> xs= {{1, 2}, {3, 4}};
                                                       ^
